# ubuntu-touch-sdl-template

./: CMakeLists.txt  manifest.json.in  run.sh  sdltemplate.desktop.in  ubuntu-touch-sdl-template.desktop
app/: CMakeLists.txt  ubuntu-touch-sdl-template.qml
app/components/: CMakeLists.txt
app/tests/autopilot/: run
app/tests/autopilot/ubuntu-touch-sdl-template/main/: test_main.py
app/ui/: CMakeLists.txt  HelloTab.qml
backend/: CMakeLists.txt
backend/modules/Sdltemplate/: backend.cpp  backend.h  qmldir
backend/tests/unit/: tst_mytype.qml
lib/: CMakeLists.txt
lib/armhf/: CMakeLists.txt  libSDL2-2.0.so.0.2.0  libSDL2-2.0.so.0.4.0  libSDL2.la  libpulse-mainloop-glib.so.0.0.4  libpulse-simple.so.0.0.4  libpulse.so.0.16.2
lib/src/: how_to_build_sdl_for_ubuntu_phone.txt
src/: main.c
